melhorando a forma de fazer com que o formulário não seja enviado

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 de 24h.</p>
         </div>
         <div class="formulario">
-            <form action="" method="" onsubmit="return false">
+            <form action="" method=""">
                 <div class="campos">
                     <input type="text" name="nome" placeholder="Nome completo *" class="campo">
                     <div class="aviso"></div>
@@ -31,7 +31,7 @@
                     <div class="aviso"></div>
                     <span>*campos obrigatórios</span> <br>
                 </div>
-                <button id="btn-enviar">Enviar</button>
+                <button type="button" id="btn-enviar">Enviar</button>
             </form>
         </div>
     </div>
